money: eliminate deprecation warnings